--- a/src/components/organisms/ux/flip/flip.css
+++ b/src/components/organisms/ux/flip/flip.css
@@ -88,6 +88,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
 }
 
 .backTopImg img {
